# NICERUTIL

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: Untitled.ipynb  flagged_flares.txt  flagged_flares_gti.fits  flagged_flares_gti.txt  ni6533062201_lc.txt
src/nicerutil/: __init__.py  build_gti.py  bursts.py  collect_data.py  compare_mkfs_undershoots.py  convenience.py  correct_gtis.py  correctfpmsel.py  correctrateforfpmsel.py  eventfile.py  flagbackgrflares.py  get_nicer_aws.py  lightcurve.py  mergeeventfiles.py  mkfdiagnostics.py  nicer_processing.py  nicermkf.py  nicerutil_logging.py  xmm_processing.py
src/nicerutil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
